<resources>
    <string name="app_name">LoginApplication</string>
    <string name="registration">REGISTRATION</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_age">Enter Age</string>
    <string name="select_city">Select City</string>
    <string name="gender">Gender</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="user_details">USER DETAILS</string>
    <string name="home_page">HOME PAGE</string>
    <string name="login_app">Login App</string>
    <string name="l">A</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user">NEW USER? SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="ooops">Ooops !</string>
    <string name="no_internet_connection_found_n_check_your_connection">No internet connection found. \n Check your Connection</string>
    <string name="try_again">Try Again</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_age">Please Enter Age</string>
    <string name="please_enter_city">Please Enter City</string>
    <string name="user_details1">User Details</string>
    <string name="ok">Click Here </string>
    <string name="username">Username</string>
</resources>