<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/round_background"
    android:backgroundTint="#009688">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_internet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ooops"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection_found_n_check_your_connection"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_try_again"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/bottom_bar"/>


</LinearLayout>