<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:transitionName="transition_logo_image" />

    <TextView
        android:id="@+id/logoname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000000"
        android:textSize="30sp"
        android:transitionName="transition_title_text"
        app:fontFamily="@font/bungee" />

    <TextView
        android:id="@+id/sloganname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoname"
        android:text="@string/sign_in_to_continue"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="@font/antic" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sloganname"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout">

        <CheckBox
            android:id="@+id/rememberme"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/remember_me"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/forget_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout1"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:transitionName="transition_next_btn">

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:transitionName="login_User" />

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout2"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:fontFamily="@font/antic"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:transitionName="register_user" />
</RelativeLayout>
