<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_details"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/username_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/email_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/phone_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/city_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/ok"
        android:textColor="@color/white" />
</LinearLayout>